# mkdownloader

./: .gitignore  README.md  VERSION.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icon.ps1  icon.icns
src-tauri/src/: lib.rs  main.rs
